Added Links and Images
Starting to add links and images to website

--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCKTYPE html>
 <html>
-<!-- Comment Test !-->
 <head>
+
 <title> Geovisualization Portfolio </title>
 <body>
+
 <h1> GEOG 3540 Portfolio </h1>
+
 <p> In this page you will see my projects for Geographic Visualization </p>
+
+<p> <a href = "https://observablehq.com/d/8ca377a5ce0a1c5b"> Link to project number three, Choropleth mapping. </a> </p>
+
+<p> This project looked at population density in the state of New Jersey on the county level. </p>
+
+<p> <img src="choropleth.png" /> </p>
+
+
 
 </body>
 </head>
