--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCKTYPE html>
 <html>
 <head>
+<style>
+
+p {
+background-color: #dddddd
+}
+
+h1 {
+font-family: sans-serif;
+}
+
+</style>
 
 <title> Geovisualization Portfolio </title>
 <body>
@@ -14,8 +25,6 @@
 <p> This project looked at population density in the state of New Jersey on the county level. </p>
 
 <p> <img src="choropleth.png" /> </p>
-
-
 
 </body>
 </head>
