--- a/index.html
+++ b/index.html
@@ -70,86 +70,39 @@
         </div>
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="https://observablehq.com/d/66ea432ea9c13d68"><img class="card-img-top" src="proportionalSymbols.png" alt=""></a>
+            <a href="https://observablehq.com/d/66ea432ea9c13d68"><img class="card-img-top" src="Images/proportionalSymbols.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="https://observablehq.com/d/66ea432ea9c13d68">Point Symbol Mapping</a>
               </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+              <p class="card-text">Same concept as Population Density but this time represented as a point symbol map. This one is more effective at visualizing the population gap between the condensed metropolitan locations and the more rural locations. In fact, the gap between the largest observation (12,000/sqMile), and the smallest (>100/sqMile) is so large that the legend cannot visualize the smallest value. </p>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <a href="https://observablehq.com/d/55b864ce041a5874"><img class="card-img-top" src="Images/bivariate.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Project Three</a>
+                <a href="https://observablehq.com/d/55b864ce041a5874">Bivariate Map</a>
               </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quisquam, error quod sed cumque, odio distinctio velit nostrum temporibus necessitatibus et facere atque iure perspiciatis mollitia recusandae vero vel quam!</p>
+              <p class="card-text">This bivariate map was fun to make. It attempts to illustrate the quantity of contaminated sites in each county to the Population Density.I found data from the New Jerser Environmental Protection Agency GIS Division on these sites but had to sort through the counts manually, as it was not formatted in a way convenient to my needs. However NJ only has 21 counties so I am certainly thankful for that. Looking at the visualized data, we can see a strong association between these two values. Where PopDensity is high, so is number of contaminated sites. Only a handful of polygons stray from this middle, combined values on the legend. I tried to standardize the data to show number of sites per sqMile but the entire map ended up looking the same. So this tells me there is a reasonable high correlation between these two variables.  </p>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <a href="https://observablehq.com/@caglarkoylu/isarithmic-mapping-geog-3540"><img class="card-img-top" src="Images/isarithmic.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Project Four</a>
+                <a href="https://observablehq.com/@caglarkoylu/isarithmic-mapping-geog-3540">Isarithmic</a>
               </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+              <p class="card-text">Since we did not have an isarithmic mapping assignment, this one by Dr. Koylu is worth looking at. Disclaimer. Despite it being in my portfolio this is not my work. This map looks at the state of Iowa and shows us total annual rainfall for different parts of the state. Norhteast Iowa is surpisingly dense, receiving almost 20 more inches on averages than the southern counties. Some counties, like Guthrie, has a small section in the middle that receives more rainfall, but these sections are never more than one degree higher than the surrounding amount. I feel we could have a better picture/understanding of the phenomenon if we had a similiar map of Wisconsin and Minnesota in combination with this one. </p>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 portfolio-item">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Project Five</a>
-              </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 portfolio-item">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Project Six</a>
-              </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque earum nostrum suscipit ducimus nihil provident, perferendis rem illo, voluptate atque, sit eius in voluptates, nemo repellat fugiat excepturi! Nemo, esse.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- /.row -->
 
-      <!-- Pagination -->
-      <ul class="pagination justify-content-center">
-        <li class="page-item">
-          <a class="page-link" href="#" aria-label="Previous">
-            <span aria-hidden="true">&laquo;</span>
-            <span class="sr-only">Previous</span>
-          </a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#">1</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#">2</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#">3</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#" aria-label="Next">
-            <span aria-hidden="true">&raquo;</span>
-            <span class="sr-only">Next</span>
-          </a>
-        </li>
-      </ul>
+
 
     </div>
     <!-- /.container -->
@@ -157,7 +110,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
+        <p class="m-0 text-center text-white">Copyright &copy; Tyler Watters 2023</p>
       </div>
       <!-- /.container -->
     </footer>
