--- a/smallMultiples/index.html
+++ b/smallMultiples/index.html
@@ -116,7 +116,7 @@
 
 	/////////////////////////////////////////////////////////////////////////////////////////////////
 	// TODO: Change the variables below to customize the small multiples interface for your data
-	var polygonJSONFile = 'data/PassaicFARAD.geojson'
+	var polygonJSONFile = 'data/PassaicFARAD.json'
 	// change the projection if needed *d3.geoAlbers()*
 	var projection = d3.geoAlbers();
 	var widthheightRatio = 0.4;
