--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             <li class="nav-item">
               <a class="nav-link" href="Files/Resume.pdf">Resume</a>
             </li>
+	<li class="nav-item">
+              <a class="nav-link" href="smallmultiples/index.html">Small Multiples</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="mailto:tylerwatters@uiowa.edu">Contact</a>
             </li>
