--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <a class="nav-link" href="Files/Resume.pdf">Resume</a>
             </li>
 	<li class="nav-item">
-              <a class="nav-link" href="smallMultiples/index.html">Small Multiples</a>
+              <a class="nav-link" href="poverty/index.html">Small Multiples</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="mailto:tylerwatters@uiowa.edu">Contact</a>
