--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
             <li class="nav-item">
               <a class="nav-link" href="Files/Resume.pdf">Resume</a>
             </li>
-	<li class="nav-item">
-              <a class="nav-link" href="poverty/index.html">Small Multiples</a>
-            </li>
+	
             <li class="nav-item">
               <a class="nav-link" href="mailto:tylerwatters@uiowa.edu">Contact</a>
             </li>
@@ -67,7 +65,7 @@
               <h4 class="card-title">
                 <a href="https://observablehq.com/d/8ca377a5ce0a1c5b">Population Density</a>
               </h4>
-              <p class="card-text">Analyzing the population density of New Jersey at the county level. Data was taken from the New Jerser Environmental Protection Agency GIS Division. Data is based off of 2010 census information. Looking at the clustering of high density zones in Northeast Jersey and Southwest Jersey, we have to take a small step back and realize these zones are connected to a larger metropolis. Northeast is connected directly to the Manhatten area and Southwest is right next to Philidelphia. New Jersey itself does not have any of these big name, easy to recognize land marks but it does benefit from being neighbors with a couple.</p>
+              <p class="card-text">Population density of New Jersey at the county level. Data is based off of 2010 census information. Even thoough there are areas of heavy density, they are usually part of a larger metro area like New York City.</p>
             </div>
           </div>
         </div>
@@ -78,10 +76,11 @@
               <h4 class="card-title">
                 <a href="https://observablehq.com/d/66ea432ea9c13d68">Point Symbol Mapping</a>
               </h4>
-              <p class="card-text">Same concept as Population Density but this time represented as a point symbol map. This one is more effective at visualizing the population gap between the condensed metropolitan locations and the more rural locations. In fact, the gap between the largest observation (12,000/sqMile), and the smallest (>100/sqMile) is so large that the legend cannot visualize the smallest value. </p>
+              <p class="card-text">Point symbol map representing population density. The gap between the largest observation (12,000/sqMile), and the smallest (>100/sqMile) is so large that the legend cannot visualize the smallest value. </p>
             </div>
           </div>
         </div>
+
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
             <a href="https://observablehq.com/d/55b864ce041a5874"><img class="card-img-top" src="Images/bivariate.png" alt=""></a>
@@ -89,7 +88,7 @@
               <h4 class="card-title">
                 <a href="https://observablehq.com/d/55b864ce041a5874">Bivariate Map</a>
               </h4>
-              <p class="card-text">This bivariate map was fun to make. It attempts to illustrate the quantity of contaminated sites in each county to the Population Density.I found data from the New Jerser Environmental Protection Agency GIS Division on these sites but had to sort through the counts manually, as it was not formatted in a way convenient to my needs. However NJ only has 21 counties so I am certainly thankful for that. Looking at the visualized data, we can see a strong association between these two values. Where PopDensity is high, so is number of contaminated sites. Only a handful of polygons stray from this middle, combined values on the legend. I tried to standardize the data to show number of sites per sqMile but the entire map ended up looking the same. So this tells me there is a reasonable high correlation between these two variables.  </p>
+              <p class="card-text">Map comparing population density with contaminated sites. These variables are strongly correlated so we see few examples of high density/low contaminated sites and vice versa. </p>
             </div>
           </div>
         </div>
@@ -100,11 +99,34 @@
               <h4 class="card-title">
                 <a href="https://observablehq.com/@caglarkoylu/isarithmic-mapping-geog-3540">Isarithmic</a>
               </h4>
-              <p class="card-text">Since we did not have an isarithmic mapping assignment, this one by Dr. Koylu is worth looking at. Disclaimer. Despite it being in my portfolio this is not my work. This map looks at the state of Iowa and shows us total annual rainfall for different parts of the state. Norhteast Iowa is surpisingly dense, receiving almost 20 more inches on averages than the southern counties. Some counties, like Guthrie, has a small section in the middle that receives more rainfall, but these sections are never more than one degree higher than the surrounding amount. I feel we could have a better picture/understanding of the phenomenon if we had a similiar map of Wisconsin and Minnesota in combination with this one. </p>
+              <p class="card-text">This map looks at the state of Iowa and shows us total annual rainfall for different parts of the state. Norhteast Iowa is surpisingly dense, receiving almost 20 more inches on averages than the southern counties. </p>
             </div>
           </div>
         </div>
 
+<div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="card h-100">
+            <a href="poverty/index.html"><img class="card-img-top" src="Images/smallMultiples.png" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="poverty/index.html">Poverty in Passaic</a>
+              </h4>
+              <p class="card-text">Quick analysis of poverty in Passaic County, New Jersey. We can see strong correlation between SNAP beneficiaries and those impoverished, yet those clusters are the ones with higher rates of vehicle ownership. </p>
+            </div>
+          </div>
+        </div>
+
+<div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="card h-100">
+            <a href="index.html"><img class="card-img-top" src="Images/soon.png" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="index.html">Final Project</a>
+              </h4>
+              <p class="card-text">Final Project for GEOG 3540, releasing soon.</p>
+            </div>
+          </div>
+        </div>
 
 
     </div>
