--- a/index.html
+++ b/index.html
@@ -106,6 +106,18 @@
 
 <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
+            <a href="index.html"><img class="card-img-top" src="Images/soon.png" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="index.html">Flow Map</a>
+              </h4>
+              <p class="card-text">Flow Map, WIP</p>
+            </div>
+          </div>
+        </div>
+
+<div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="card h-100">
             <a href="poverty/index.html"><img class="card-img-top" src="Images/smallMultiples.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
