--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
 
 <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="index.html"><img class="card-img-top" src="Images/soon.png" alt=""></a>
+            <a href="flowmap.html"><img class="card-img-top" src="Images/Flowmap.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="index.html">Flow Map</a>
+                <a href="flowmap.html">Flow Map</a>
               </h4>
-              <p class="card-text">Flow Map, WIP</p>
+              <p class="card-text">This is a map visualizing the flow of migration from the year 1887 to 1924. This only highlights the top 50 flows, including more than that has some severe overlap and becomes confusing to look at. Regardless, there is plenty to analyze here. We can see a large exodus from the midwestern states to the border states like Minnesota, Texas, New Mexico and even Louisiana.</p>
             </div>
           </div>
         </div>
