--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
 
 <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="index.html"><img class="card-img-top" src="Images/soon.png" alt=""></a>
+            <a href="index.html"><img class="card-img-top" src="Images/FinalWIP.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="index.html">Final Project</a>
+                <a href="Images/FinalWIP.png">Final Project</a>
               </h4>
               <p class="card-text">Final Project for GEOG 3540, releasing soon.</p>
             </div>
