--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home
-                <span class="sr-only">(current)</span>
-              </a>
+              
             </li>
             <li class="nav-item">
               <a class="nav-link" href="shortbio.html">About</a>
@@ -130,10 +128,10 @@
 
 <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="https://observablehq.com/d/14bafb099b75bd49"><img class="card-img-top" src="Images/FinalWIP.png" alt=""></a>
+            <a href="finalProject.html"><img class="card-img-top" src="Images/finalWIPresized.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="https://observablehq.com/d/14bafb099b75bd49">Final Project</a>
+                <a href="finalProject.html">Final Project</a>
               </h4>
               <p class="card-text">Final Project for GEOG 3540, releasing soon.</p>
             </div>
